--- a/roles/ohpc_add_rabbitmq_agents/tasks/main.yaml
+++ b/roles/ohpc_add_rabbitmq_agents/tasks/main.yaml
@@ -2,7 +2,7 @@
 - name: Clone the git repo to the machine
   git: 
     repo: https://github.com/uabrc/rabbitmq_agents.git
-    dest: /opt/rabbitmq_agents
+    dest: "{{ rabbitmq_agents_loc }}"
     version: develop
 
 - name: Make a copy of rabbit config example file
