--- a/roles/ood_add_rabbitmq_agents/tasks/main.yaml
+++ b/roles/ood_add_rabbitmq_agents/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Clone the git repo to the machine
   git: 
-    repo: https://github.com/uabrc/rabbitmq_agents.git
+    repo: "{{ rabbitmq_agents_repo }}"
     dest: "{{ rabbitmq_agents_loc }}"
     version: develop
 
