Check if celery user password is empty

--- a/roles/ohpc_rabbitmq/tasks/main.yaml
+++ b/roles/ohpc_rabbitmq/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 - fail:
-    msg: Please pass in password for rabbitmq user
-  when: rabbitmq_user_password == ""
+    msg: Please specify password for rabbitmq user
+  when: rabbitmq_user_password == "" or celery_user_password == ""
 
 - name: Import RabbitMQ signing key
   rpm_key:
