Use celery from venv

--- a/roles/ood_user_reg_cloud/templates/celery.service
+++ b/roles/ood_user_reg_cloud/templates/celery.service
@@ -2,12 +2,15 @@
 Description=Service to start celery process.
 After=network.target
 StartLimitIntervalSec=0
+
 [Service]
 Type=simple
 Restart=always
 RestartSec=1
 User=centos
 WorkingDirectory={{ user_register_app_path }} 
-ExecStart=/usr/bin/env celery -A tasks worker --loglevel=info --concurrency=4
+Environment="PATH={{ user_register_app_path }}/venv/bin"
+ExecStart={{ user_register_app_path }}/venv/bin/celery -A tasks worker --loglevel=info --concurrency=4
+
 [Install]
 WantedBy=multi-user.target
