Change file name of celery template
to be consistent, use .j2 extension for templates
Also, there's no list to loop through so remove with_items

--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -47,10 +47,8 @@
 
 - name: Copy Celery service template
   template:
-    src: "{{ item }}"
-    dest: "/etc/systemd/system/{{ item }}"
-  with_items:
-    - celery.service
+    src: celery.j2
+    dest: "/etc/systemd/system/celery.service"
 
 - name: Start celery.service
   service:
