--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -32,9 +32,9 @@
     virtualenv_command: /usr/bin/python3 -m venv
     chdir: "{{ user_register_app_path }}"
 
-- name: Install uwsgi in virtualenv
+- name: Install gunicorn in virtualenv
   pip:
-    name: uwsgi
+    name: gunicorn
     virtualenv: venv
     virtualenv_command: /usr/bin/python3 -m venv
     chdir: "{{ user_register_app_path }}"
@@ -69,12 +69,12 @@
     src: wsgi.j2
     dest: "{{ user_register_app_path }}/wsgi.py"
 
-- name: Put uwsgi config file in place
+- name: Put gunicorn config file in place
   template:
     src: ini.j2
     dest: "{{ user_register_app_path }}/{{ user_register_app }}.ini"
 
-- name: Create uwsgi system service
+- name: Create gunicorn system service
   template:
     src: service.j2
     dest: "/etc/systemd/system/{{ user_register_app }}.service"
