--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -47,7 +47,7 @@
 
 - name: Copy Celery service template
   template:
-    src: celery.j2
+    src: celery.service.j2
     dest: "/etc/systemd/system/celery.service"
 
 - name: Start celery.service
