--- a/roles/ood_add_rabbitmq_agents/tasks/main.yaml
+++ b/roles/ood_add_rabbitmq_agents/tasks/main.yaml
@@ -19,11 +19,11 @@
 
 - name: Copy service files to the machine.
   template:
-    src: ood_account.j2
-    dest: "/etc/systemd/system/ood_account.service"
+    src: ood_account_agent.j2
+    dest: "/etc/systemd/system/ood_account_agent.service"
 
 - name: Start ood_account.service
   service:
-    name: ood_account.service
+    name: ood_account_agent.service
     state: started
     enabled: yes
