Allowing for outside management of DHCP

--- a/roles/viz_build_nodes/tasks/main.yml
+++ b/roles/viz_build_nodes/tasks/main.yml
@@ -46,8 +46,13 @@
      with_items: "{{ viz_nodes }}"
 
    - name: restart dhcp
-     service: name=dhcpd state=restarted
+     service: name=dhcpd state=restarted enabled=yes
+     when: dhcpd_enabled == true
  
+   - name: disable dhcp if required
+     service: name=dhcpd state=stopped enabled=no
+     when: dhcpd_enabled == false
+
    - name: update pxeconfig to let node boot from pxe
      command: wwsh -y object modify -D bootlocal -t node {{ item.name }}
      with_items: "{{ compute_nodes }}"
