edits for inclusion of xCAT
Added use_warewulf flag for separation of provisioning options
Added CentOS ISO download and verify tasks, xCAT install via yum.

Signed-off-by: Eric Coulter <jecoulte@iu.edu>

--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -1,5 +1,40 @@
 ---
 
+   - name: get OpenHPC Repo #hardcoded version # :(
+     yum: name={{ openhpc_release_rpm }} state=present
+ 
+   - name: get xCAT Repo 
+     get_url:
+        url: https://xcat.org/files/xcat/repos/yum/latest/xcat-core/xcat-core.repo
+        dest: /etc/yum.repos.d/
+        mode: '0440'
+     when: use_warewulf == false
+ 
+   - name: get xCAT dependencies Repo 
+     get_url:
+        url: https://xcat.org/files/xcat/repos/yum/xcat-dep/rh7/x86_64/xcat-dep.repo
+        dest: /etc/yum.repos.d/
+        mode: '0440'
+     when: use_warewulf == false
+
+   - name: create ISO storage location
+     file:
+        path: /opt/iso/
+        state: directory
+        mode: '0755'
+     when: use_warewulf == false
+
+   - name: get CentOS ISO Checksum
+     shell: wget -q -O - "{{ CentOS_checksums_url }}" | grep "{{ CentOS_iso_version }}" | cut -d' ' -f 1
+     register: centos_iso_sha256sum
+
+   - name: get CentOS ISO
+     get_url:
+        url: "{{ CentOS_iso_url }}"
+        dest: /opt/iso/
+        checksum: "{{ centos_iso_sha256sum }}"
+     when: use_warewulf == false
+ 
    - name: install OpenHPC base, warewulf, slurm server, and compiler packages
      yum:
        name: [ 
@@ -11,6 +46,22 @@
                "gnu-compilers-ohpc"
              ]
        state: latest
+     when: use_warewulf == true
+
+#ohpc-base ohpc-slurm-server lmod-defaults-gnu-openmpi-ohpc openmpi-gnu-ohpc gnu-compilers-ohpc xCAT
+
+   - name: install OpenHPC base, xCAT, slurm server, and compiler packages
+     yum:
+       name: [ 
+               "ohpc-base",
+               "ohpc-slurm-server",
+               "lmod-defaults-gnu-openmpi-ohpc",
+               "openmpi-gnu-ohpc", 
+               "gnu-compilers-ohpc",
+               "xCAT"
+             ]
+       state: latest
+     when: use_warewulf == false
 
    - name: yum update
      yum: name=* state=latest update_cache=yes
@@ -35,6 +86,8 @@
 
    - name: insert rhel-xcbc WW template
      copy: src=include-rhel-xcbc dest="{{ template_path }}include-rhel-xcbc"
+     when: use_warewulf == true
+
  
    - name: fix the warewulf wwsh script... ARGH (line 29)
      lineinfile: 
@@ -42,6 +95,8 @@
        insertafter: '^\$ENV\{\"PATH\"\}'
        line: "delete @ENV{'PATH', 'IFS', 'CDPATH', 'ENV', 'BASH_ENV'};"
        state: present
+     when: use_warewulf == true
+
 
    - name: fix the warewulf wwnodescan script... ARGH (line 96)
      lineinfile: 
@@ -49,8 +104,8 @@
        insertafter: '^\$ENV\{\"PATH\"\}'
        line: "delete @ENV{'PATH', 'IFS', 'CDPATH', 'ENV', 'BASH_ENV'};"
        state: present
+     when: use_warewulf == true
 
- 
    - name: initialize slurmdb databases
      mysql_db:
        name: "{{ slurm_acct_db }}"
