--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -26,6 +26,7 @@
                "chrony",
                "pciutils",
                "rsync",
+               "mariadb-server",
                "bash-completion",
                "libselinux-python",
                "libsemanage-python",
