config files for internal firewall and xCAT
based on https://xcat-docs.readthedocs.io/en/stable/advanced/ports/xcat_ports.html

Signed-off-by: Eric Coulter <jecoulte@iu.edu>

--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -51,6 +51,8 @@
 
    - template: src=firewall_conf/services/slurm.xml dest=/etc/firewalld/services/slurm.xml
  
+   - template: src=firewall_conf/services/xcat.xml dest=/etc/firewalld/services/xcat.xml
+
    - template: src=firewall_conf/firewalld.conf dest=/etc/firewalld/firewalld.conf
 
    - template: src=firewall_conf/zones/internal.xml dest=/etc/firewalld/zones/internal.xml
