removed nmcli task
nmcli module is community supported, has issues with
centos 8 support at the moment.
https://github.com/ansible/ansible/issues/48055 is still
relevant.
Per: https://groups.google.com/forum/#!topic/ansible-project/OcWYe79rU1M
may switch to https://github.com/linux-system-roles/network
in the future.

Signed-off-by: Eric Coulter <jecoulte@iu.edu>

--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -72,12 +72,13 @@
        state: started
        enabled: yes
 
-   - name: manage interface with nmcli
-     nmcli: 
-       conn_name: "{{ private_interface }}"
-       ifname: "{{ private_interface }}"
-       type: ethernet
-       state: present
+#   - name: manage interface with nmcli
+#     nmcli: 
+#       conn_name: "{{ private_interface }}"
+#       ifname: "{{ private_interface }}"
+#       type: ethernet
+#       state: present
+#
 
    - name: add private interface to internal zone via nmcli
      command: nmcli connection modify {{ private_interface }} connection.zone internal
