--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -19,6 +19,7 @@
                "lsof",
                "xinetd",
                "vim",
+               "mariadb-server",
                "net-tools",
                "exportfs",
                "firewalld",
