fix flask app permission  (#178)
* changed owner of cloned flask app directory and log directory from reggie to apache

* changed user reggie to apache in service file to resolve flask app permission issue

--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -20,7 +20,7 @@
 - name: Change ownership of directory
   file:
     path: "{{ user_register_app_path }}"
-    owner: "{{ RegUser_app_user }}"
+    owner: apache
     group: apache
     state: directory
     recurse: yes
@@ -42,7 +42,7 @@
 - name: Create log directory
   file:
     path: "{{ user_register_app_path }}/log"
-    owner: "{{ RegUser_app_user }}"
+    owner: apache
     group: apache
     state: directory
 
