Forgot about original Nvidia installer

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /host_vars/
 # Ignore site-specific Nvidia/CUDA installers
 /roles/gpu_build_vnfs/files/*.run
+# Leave original Nvidia installer intact
+!/roles/gpu_build_vnfs/files/NVIDIA-Linux-x86_64-375.39.run
