Typos in yum parameters

--- a/roles/gpu_build_vnfs/tasks/main.yml
+++ b/roles/gpu_build_vnfs/tasks/main.yml
@@ -14,7 +14,7 @@
 
    - name: yum install into the image chroot
      yum:
-       packages: "{{ packages }}"
+       name: "{{ packages }}"
        installroot:  "{{ gpu_chroot_loc }}"
      vars:
        packages:
