--- a/roles/login_build_vnfs/tasks/main.yml
+++ b/roles/login_build_vnfs/tasks/main.yml
@@ -14,7 +14,7 @@
 
    - name: yum install into the image chroot
      yum:
-       packages: "{{ packages }}"
+       name: "{{ packages }}"
        installroot: "{{ login_chroot_loc }}"
      vars:
        packages:
