--- a/roles/build_nodes/tasks/main.yml
+++ b/roles/build_nodes/tasks/main.yml
@@ -59,7 +59,7 @@
      when: node_inventory_auto == false
 
    - block:
-     - name: add nodes via wwnodescan
+     - name: add nodes via wwnodescan - BOOT NODES {{ node_glob }} NOW, IN ORDER
        shell: wwnodescan --listen={{ private_interface }} --ip={{ ip_minimum }} --netdev={{ compute_private_nic }} --netmask={{ private_network_long_netmask }} --bootstrap={{ build_kernel_ver }} --vnfs={{ chroot }} {{ node_glob_bash }}
 
      - name: set node glob gateway in ww db
