--- a/roles/compute_build_vnfs/tasks/main.yml
+++ b/roles/compute_build_vnfs/tasks/main.yml
@@ -12,7 +12,7 @@
      register: running_kernel_version
 
    - name: check most recent installed kernel version
-     shell: yum list installed | grep 'kernel\.' | tail -n 1 | awk '{print $2}'
+     shell: dnf list installed | grep 'kernel\.' | tail -n 1 | awk '{print $2}'
      register: installed_kernel_version
      args:
        warn: false
@@ -30,11 +30,12 @@
        path: "{{ compute_chroot_loc }}"
        state: absent
 
-   - template: src=compute_template.j2 dest="{{ template_path }}{{ compute_template }}.tmpl"
-
-   - template: src=extend_compute_packages.j2 dest="{{ template_path }}extend_compute_packages"
-
-   - template: src=base_packages.j2 dest="{{ template_path }}base_packages"
+# Just using the base CentOS 8 template for now
+#   - template: src=compute_template.j2 dest="{{ template_path }}{{ compute_template }}.tmpl"
+#
+#   - template: src=extend_compute_packages.j2 dest="{{ template_path }}extend_compute_packages"
+#
+#   - template: src=base_packages.j2 dest="{{ template_path }}base_packages"
  
    - name: make chroot
      command: wwmkchroot "{{ compute_template }}" "{{ compute_chroot_loc }}"
@@ -42,9 +43,25 @@
    - name: copy resolv.conf into image
      copy: src=/etc/resolv.conf dest="{{ compute_chroot_loc }}/etc/resolv.conf" #"
 
-   - name: yum install into the image chroot
-     command: yum -y --installroot={{ compute_chroot_loc }} install chrony kernel lmod-ohpc grub2 freeipmi ipmitool ohpc-slurm-client 
-#" for vim
+   - name: get OpenHPC Repo #hardcoded version # :(
+     dnf: 
+       name: "{{ openhpc_release_rpm }}" 
+       state: present
+       installroot: "{{ compute_chroot_loc }}"
+
+   - name: dnf install into the image chroot
+     dnf:
+       name: [
+               "chrony",
+               "kernel",
+               "lmod-ohpc",
+               "grub2",
+               "freeipmi",
+               "ipmitool",
+               "ohpc-slurm-client",
+             ]
+       state: present
+       installroot: "{{ compute_chroot_loc }}"
 
    - name: copy ssh keys over
      copy: src=cluster_root.pub dest={{ compute_chroot_loc }}/root/.ssh/authorized_keys
