Added PowerTools repo for lua- packages
Signed-off-by: Eric Coulter <jecoulte@iu.edu>

--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -48,6 +48,15 @@
              ]
        state: latest
 
+   - name: enable CentOS PowerTools repo
+     ini_file:
+      path: /etc/yum.repos.d/CentOS-PowerTools.repo
+      section: PowerTools
+      option: enabled
+      value: 1
+      mode: '0644'
+      backup: no
+
 #this is only necessary for non-local ansible!
 #   - name: turn off requiretty for sudo
 #     lineinfile:
