edited to use multiple inventory files
Signed-off-by: Eric Coulter <jecoulte@iu.edu>

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 retry_files_enabled = False
-inventory = ./inventory/headnode
+inventory = ./inventory
 
 [ssh_connection]
 control_path = ~/.ssh/ansible-%%r@%%h:%%p
