--- a/nodes.yml
+++ b/nodes.yml
@@ -3,3 +3,8 @@
    roles:
 
    - {role: compute_config_xcat, tags: compute_config_xcat, when: use_warewulf == false}
+   - {role: compute_ganglia_xcat, tags: compute_ganglia_xcat, when: use_warewulf == false}
+
+ - hosts: headnode
+   roles:
+   - {role: sync_users, tags: sync_users, when: use_warewulf == false}
