--- a/roles/ohpc_config/tasks/main.yml
+++ b/roles/ohpc_config/tasks/main.yml
@@ -86,7 +86,7 @@
 
    - name: set headnode as nameserver
      template: 
-       src: resolve.j2
+       src: resolv.j2
        dest: /etc/resolv.conf
        mode: 0644
      when: use_warewulf == false
