fixed failed_when on makedns
Signed-off-by: Eric Coulter <jecoulte@iu.edu>

--- a/roles/compute_define_xcat/tasks/main.yml
+++ b/roles/compute_define_xcat/tasks/main.yml
@@ -39,7 +39,7 @@
      register: mkdns_output
      failed_when: 
        - chdef_output.rc != 0 
-       - '"DNS setup is completed" not in mkdns_output.stderr'
+       - '"DNS setup is completed" not in mkdns_output.stdout'
 
    - name: get osimage name
      shell: lsdef -t osimage | grep install-compute | awk '{print $1}'
