--- a/nodes.yml
+++ b/nodes.yml
@@ -2,9 +2,6 @@
  - hosts: compute-nodes
    roles:
 
-   - {role: compute_config_xcat, tags: compute_config_xcat, when: use_warewulf == false}
+   - {role: compute_config_xcat, tags: compute_config_xcat, when: use_warewulf == falsei, vars: { users_only: "false" } }
+   - {role: compute_config_xcat, tags: compute_config_users, when: use_warewulf == false, vars: { users_only: "true" } }
    - {role: compute_ganglia_xcat, tags: compute_ganglia_xcat, when: use_warewulf == false}
-
- - hosts: headnode
-   roles:
-   - {role: sync_users, tags: sync_users, when: use_warewulf == false}
